Projeto incrementado com imagem

--- a/src/main/webapp/views/logged/home.view.html
+++ b/src/main/webapp/views/logged/home.view.html
@@ -25,7 +25,7 @@
             <ul class="dropdown-menu"> 
               <li><a href="#/home/logged/pedido" class="component-holder col-md-12" data-component="crn-anchor">Pedido</a></li> 
               <li><a href="#/home/logged/produto" class="component-holder col-md-12" data-component="crn-anchor">Produto</a></li> 
-            <li><a href="#/home/logged/aluno" class="component-holder col-md-12" data-component="crn-anchor">Aluno</a></li><li><a href="#/home/logged/livros" class="component-holder col-md-12" data-component="crn-anchor">Livro</a></li></ul></li> 
+            <li><a href="#/home/logged/aluno" class="component-holder col-md-12" data-component="crn-anchor">Aluno</a></li><li><a href="#/home/logged/livros" class="component-holder col-md-12" data-component="crn-anchor">Livro</a></li><li><a href="#/home/logged/pessoafisica" class="component-holder col-md-12" data-component="crn-anchor">Pessoa Fisica</a></li></ul></li> 
         </ul> 
       </div> 
     </div> 
